# OOP-Project

./: CMakeLists.txt  README.md
program/: CMakeLists.txt
program/include/: archiveFunctions.h  classRoomFunctions.h  groupsFunctions.h  lessonFunctions.h  peopleFunctions.h
program/src/: classRoomFunctions.cpp  lessonFunctions.cpp  main.cpp  peopleFunctions.cpp
